--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: Build, Test and Deploy django_react_aws backend
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   build-test:
