fix(backend): :bug: minor fix again

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,5 +18,4 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
-          whoami
-          ls -al
+          ./django_react_aws/docker-ec2-deploy.sh
