--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,10 +4,26 @@ on:
   push:
     branches: [ master ]
 
+
 jobs:
+  build-test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Injecting environment vars
+      run: |
+        echo "${{ secrets.TEST_SECRETS }}" >> .env
+    - name: List all files
+      run: |
+        ls -al
+    - name: Access files
+      run: |
+        cd ./django_react_aws
+        ls -al
   deploy:
     name: Deploying on EC2 via SSH
     if: ${{ github.event_name == 'push' }}
+    needs: [build-test]
     runs-on: ubuntu-latest
     steps:
     - name: Deploying Application on EC2
