fix(backend): :bug: fix

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,4 +32,5 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           ls -al
-          ./docker-ec2-deploy.sh
+          cd django_react_aws
+
