--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -12,8 +12,9 @@ jobs:
   copy-django-static:
     name: Copy django staticfiles
     runs-on: ubuntu-latest
-    run:
-        working-directory: ./
+    defaults:
+      run:
+          working-directory: ./
     steps: 
       - name: Git clone on our repo
         uses: actions/checkout@v2
