--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -12,6 +12,7 @@ jobs:
   copy-django-static:
     name: Copy django staticfiles
     runs-on: ubuntu-latest
+    needs: [build-deploy]
     defaults:
       run:
           working-directory: ./
@@ -27,7 +28,7 @@ jobs:
           aws-region: ${{ env.AWS_REGION_NAME }}
 
       - name: Copying file to S3
-        run: aws s3 cp ${{ env.DEPLOY_STATICFILES_NAME }} s3://${{ env.AWS_STORAGE_BUCKET_NAME }}/
+        run: aws s3 cp ./${{ env.DEPLOY_STATICFILES_NAME }}/ s3://${{ secrets.AWS_STORAGE_BUCKET_NAME }}
 
       - name: Print nice message on success finish
         run: echo "CI part finished successfuly"
