--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Injecting environment variables
         run: echo "REACT_APP_API_URL=${{ secrets.API_URL }}" >> .env
 
+      - name: Installing dependencies
+        run: npm install
+
       - name: Building project
         run: npm run build
 
