--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -59,4 +59,4 @@ jobs:
           aws-region: ${{ env.AWS_REGION_NAME }}
 
       - name: Deploy to S3 bucket
-        run: aws s3 sync ./build/ s3://${{ secrets.AWS_STORAGE_BUCKET_NAME }} --delete
+        run: aws s3 sync ./dist/ s3://${{ secrets.AWS_STORAGE_BUCKET_NAME }} --delete
