--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
+asgiref==3.6.0
+attrs==22.2.0
+autopep8==2.0.2
+boto3
 Django==4.0.1
-psycopg2-binary==2.9.3
-djangorestframework==3.13.1
+django-cors-headers==3.11.0
 django-filter==21.1
-pillow==9.0.0
+django-storages==1.13.2
+djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 drf-nested-routers==0.93.4
-pytest-django==4.5.2
-django-cors-headers==3.11.0
-python-dotenv==0.20.0
+exceptiongroup==1.1.1
 gunicorn==20.1.0
-django-storages==1.13.2
+iniconfig==2.0.0
+packaging==23.0
+Pillow==9.0.0
+pluggy==1.0.0
+psycopg2-binary==2.9.3
+pycodestyle==2.10.0
+PyJWT==2.6.0
+pytest==7.2.2
+pytest-django==4.5.2
+python-dotenv==0.20.0
+pytz==2023.2
+sqlparse==0.4.3
+tomli==2.0.1
