--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "axios-auth-refresh": "^3.3.6",
+    "classname": "^0.0.0",
     "daisyui": "^2.51.5",
     "formik": "^2.2.9",
     "react": "^18.2.0",
