--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-scroll": "^1.8.9",
+    "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
