--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "scrollmagic": "^2.0.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
