--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "axios-auth-refresh": "^3.3.6",
     "classname": "^0.0.0",
     "daisyui": "^2.51.5",
     "formik": "^2.2.9",
+    "luxon": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
     "scrollmagic": "^2.0.8"
